Server/logger/uncaughtExceptions.log
2020-04-24T11:30:38.426Z [error]: main - uncaughtException: Unexpected identifier
C:\Users\Sebas\Desktop\Licencjat\Server\middleware\role.js:3
    console token = req.header('x-auth-token');
            ^^^^^

SyntaxError: Unexpected identifier
    at wrapSafe (internal/modules/cjs/loader.js:1071:16)
    at Module._compile (internal/modules/cjs/loader.js:1121:27)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1177:10)
    at Module.load (internal/modules/cjs/loader.js:1001:32)
    at Function.Module._load (internal/modules/cjs/loader.js:900:14)
    at Module.require (internal/modules/cjs/loader.js:1043:19)
    at require (internal/modules/cjs/helpers.js:77:18)
    at Object.<anonymous> (C:\Users\Sebas\Desktop\Licencjat\Server\routes\index.js:4:14)
    at Module._compile (internal/modules/cjs/loader.js:1157:30)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1177:10)
2020-04-24T11:34:48.164Z [error]: main - uncaughtException: Unexpected token '=='
C:\Users\Sebas\Desktop\Licencjat\Server\middleware\role.js:4
    if( == 0) return res.status(403).send('Access denied.');
        ^^

SyntaxError: Unexpected token '=='
    at wrapSafe (internal/modules/cjs/loader.js:1071:16)
    at Module._compile (internal/modules/cjs/loader.js:1121:27)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1177:10)
    at Module.load (internal/modules/cjs/loader.js:1001:32)
    at Function.Module._load (internal/modules/cjs/loader.js:900:14)
    at Module.require (internal/modules/cjs/loader.js:1043:19)
    at require (internal/modules/cjs/helpers.js:77:18)
    at Object.<anonymous> (C:\Users\Sebas\Desktop\Licencjat\Server\routes\index.js:4:14)
    at Module._compile (internal/modules/cjs/loader.js:1157:30)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1177:10)
2020-04-24T11:37:17.989Z [error]: main - uncaughtException: Unexpected token '=='
C:\Users\Sebas\Desktop\Licencjat\Server\middleware\role.js:4
    if( == 0) return res.status(403).send('Access denied.');
        ^^

SyntaxError: Unexpected token '=='
    at wrapSafe (internal/modules/cjs/loader.js:1071:16)
    at Module._compile (internal/modules/cjs/loader.js:1121:27)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1177:10)
    at Module.load (internal/modules/cjs/loader.js:1001:32)
    at Function.Module._load (internal/modules/cjs/loader.js:900:14)
    at Module.require (internal/modules/cjs/loader.js:1043:19)
    at require (internal/modules/cjs/helpers.js:77:18)
    at Object.<anonymous> (C:\Users\Sebas\Desktop\Licencjat\Server\routes\index.js:4:14)
    at Module._compile (internal/modules/cjs/loader.js:1157:30)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1177:10)
2020-04-24T11:37:52.184Z [error]: main - uncaughtException: Unexpected token '=='
C:\Users\Sebas\Desktop\Licencjat\Server\middleware\role.js:4
    if( == 0) return res.status(403).send('Access denied.');
        ^^

SyntaxError: Unexpected token '=='
    at wrapSafe (internal/modules/cjs/loader.js:1071:16)
    at Module._compile (internal/modules/cjs/loader.js:1121:27)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1177:10)
    at Module.load (internal/modules/cjs/loader.js:1001:32)
    at Function.Module._load (internal/modules/cjs/loader.js:900:14)
    at Module.require (internal/modules/cjs/loader.js:1043:19)
    at require (internal/modules/cjs/helpers.js:77:18)
    at Object.<anonymous> (C:\Users\Sebas\Desktop\Licencjat\Server\routes\index.js:4:14)
    at Module._compile (internal/modules/cjs/loader.js:1157:30)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1177:10)
2020-04-24T11:38:05.690Z [error]: main - uncaughtException: Unexpected token '=='
C:\Users\Sebas\Desktop\Licencjat\Server\middleware\role.js:4
    if( == 0) return res.status(403).send('Access denied.');
        ^^

SyntaxError: Unexpected token '=='
    at wrapSafe (internal/modules/cjs/loader.js:1071:16)
    at Module._compile (internal/modules/cjs/loader.js:1121:27)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1177:10)
    at Module.load (internal/modules/cjs/loader.js:1001:32)
    at Function.Module._load (internal/modules/cjs/loader.js:900:14)
    at Module.require (internal/modules/cjs/loader.js:1043:19)
    at require (internal/modules/cjs/helpers.js:77:18)
    at Object.<anonymous> (C:\Users\Sebas\Desktop\Licencjat\Server\routes\index.js:4:14)
    at Module._compile (internal/modules/cjs/loader.js:1157:30)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1177:10)
